@@ -58,7 +58,8 @@ final class SystemJvmOptions {
                 "-Dlog4j2.formatMsgNoLookups=true",
 
                 javaLocaleProviders(),
-                maybeAddOpensJavaIoToAllUnnamed()
+                maybeAddOpensJavaIoToAllUnnamed(),
+                maybeAllowSecurityManager()
             )
         ).stream().filter(e -> e.isEmpty() == false).collect(Collectors.toList());
     }
@@ -66,6 +67,15 @@ final class SystemJvmOptions {
     private static String maybeShowCodeDetailsInExceptionMessages() {
         if (JavaVersion.majorVersion(JavaVersion.CURRENT) >= 14) {
             return "-XX:+ShowCodeDetailsInExceptionMessages";
+        } else {
+            return "";
+        }
+    }
+
+    // The security manager needs to be explicitly allowed on JDK 18+.
+    private static String maybeAllowSecurityManager() {
+        if (JavaVersion.majorVersion(JavaVersion.CURRENT) >= 18) {
+            return "-Djava.security.manager=allow";
         } else {
             return "";
         }
